Tue Oct  6 13:56:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h: turn function macros into inline functions,
	  for debuggers.

	* include/ruby/ruby.h: turn constant macros into enums, for
	  debuggers.

Tue Oct  6 13:48:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* method.h: typo fix. Patch by @davydovanton [fix GH-1032][ci skip]

Tue Oct  6 06:54:34 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (rb_iseq_free): free iseq::variable_body to avoid memory
	  leak.

Tue Oct  6 06:32:52 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: enable optimization of Proc#call.
	  [Feature #11569]

	* NEWS: write about this optimization and incompatibilities.

	* test/ruby/test_backtrace.rb: catch up this fix.

Tue Oct  6 04:41:03 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: solve goto spaghetti.

	  Change all goto statement across blocks to tail call functions.

Tue Oct  6 02:29:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_resurrect): optimize by short circuit to copy
	  hidden string without checking length, encoding and so on.

Mon Oct  5 23:08:17 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_thread.rb (test_handle_interrupt_blocking): check if
	  exception handling was postponed until sleep.

Mon Oct  5 22:25:49 2015  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb: Use frozen_string_literal: true.

	* lib/prettyprint.rb: Ditto.

	* lib/resolv.rb: Ditto.

	* lib/tmpdir.rb: Ditto.

	* test/test_pp.rb: Ditto.

	* test/test_prettyprint.rb: Ditto.

	* tool/transcode-tblgen.rb: Ditto.

Mon Oct  5 20:39:32 2015  Benoit Daloze  <eregontp@gmail.com>

	* test/ruby/test_thread.rb: fix potential race condition.
	  The thread could have a "sleep" status because it tries
	  to acquire the mutex, but does not have it yet.

Mon Oct  5 15:39:30 2015  Zachary Scott  <zzak@ruby-lang.org>

	* numeric.c: [DOC] Overview for Numeric class by Joe Corcoran