@@ -2114,13 +2114,11 @@ vm_call_method0(rb_thread_t *th, rb_control_frame_t *cfp, struct rb_calling_info
     VM_ASSERT(callable_method_entry_p(cc->me));
 
     if (cc->me != NULL) {
-	if (LIKELY(METHOD_ENTRY_VISI(cc->me) == METHOD_VISI_PUBLIC && METHOD_ENTRY_SAFE(cc->me) == 0)) {
+	if (LIKELY(METHOD_ENTRY_VISI(cc->me) == METHOD_VISI_PUBLIC)) {
 	    VM_ASSERT(callable_method_entry_p(cc->me));
 	    return vm_call_method_each_type(th, cfp, calling, ci, cc, enable_fastpath);
 	}
 	else {
-	    int safe;
-
 	    if (!(ci->flag & VM_CALL_FCALL) && (METHOD_ENTRY_VISI(cc->me) == METHOD_VISI_PRIVATE)) {
 		enum method_missing_reason stat = MISSING_PRIVATE;
 		if (ci->flag & VM_CALL_VCALL) stat |= MISSING_VCALL;
@@ -2138,9 +2136,6 @@ vm_call_method0(rb_thread_t *th, rb_control_frame_t *cfp, struct rb_calling_info
 		    VM_ASSERT(cc->me != NULL);
 		    return vm_call_method_each_type(th, cfp, calling, ci, cc, FALSE);
 		}
-	    }
-	    else if ((safe = METHOD_ENTRY_SAFE(cc->me)) > th->safe_level && safe > 2) {
-		rb_raise(rb_eSecurityError, "calling insecure method: %"PRIsVALUE, rb_id2str(ci->mid));
 	    }
 	    else {
 		return vm_call_method_each_type(th, cfp, calling, ci, cc, enable_fastpath);
