@@ -1,3 +1,11 @@
+Tue Oct  6 18:47:45 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* method.h: remove METHOD_ENTRY_SAFE(me) and related code
+	  because $SAFE = 3 and 4 is not available.
+	  Now, $SAFE is not checked on method dispatch at all.
+
+	* vm_eval.c, vm_insnhelper.c, vm_method.c: ditto.
+
 Tue Oct  6 13:56:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/ruby.h: turn function macros into inline functions,
